--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,18 @@
       <artifactId>thymeleaf-spring5</artifactId>
       <version>3.0.9.RELEASE</version>
     </dependency> <!-- thymeleaf-spring5 -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.16</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-jpa</artifactId>
+      <version>2.3.4.RELEASE</version>
+    </dependency>
+
   </dependencies>
 
   <build>
